<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Library app</string>
    <string name="lang_change">Languages</string>
    <string name="main_welcome">Welcome to Library app. Manage your borrows directly from your smartphone</string>
    <string name="label_account">My account</string>
    <string name="label_books">Books</string>
    <string name="label_webapp">Consult the website</string>
    <string name="label_contact">Contact us</string>
    <string name="label_personnalize">Customize book page</string>
    <string name="contact_form_welcome">An improuvement ? An error detected ? Inform us about it.</string>
    <string name="label_contact_send">Send</string>
    <string name="contact_select_item">-- select the mail type --</string>
    <string name="contact_item_bug">Bug</string>
    <string name="contact_item_feature">New feature</string>
    <string name="contact_item_congrats">Congratulations</string>
    <string name="contact_item_other">Others</string>
    <string name="contact_form_title">Title</string>
    <string name="contact_form_content">Content</string>
    <string name="contact_form_address">Your e-mail</string>
    <string name="contact_form_category">Demand\'s type</string>
    <string name="contact_form_category_error">Invalid demand\'s type</string>
    <string name="email_select_client">Select your e-mail client</string>
    <string name="mail_sent_ok">E-mail was correctly sent</string>
    <string name="mail_sent_error">An error occured on sending e-mail</string>
    <string name="books_tab_all">All</string>
    <string name="books_tab_categories">By categories</string>
    <string name="books_tab_writers">By writers</string>
    <string name="label_borrowing_date">Borrowing date</string>
    <string name="label_borrowing_date_submit">Borrow</string>
    <string name="lang_fr">French</string>
    <string name="lang_en">English</string>
    <string name="lang_choose">Choose your language</string>
    <string name="lang_select">Please select the language of your application</string>
    <string name="form_submit">Submit</string>
    <string name="form_cancel">Cancel</string>
    <string name="reminder_intro">You have some borrowed books to return !</string>
    <string name="reminder_nb">Quantity of books to return : </string>
    <string name="reminder_date_return">Return date : </string>
    <string name="label_sms_submit">Send SMS</string>
    <string name="label_sms_number">Receiver\'s number</string>
    <string name="label_sms_content">Message</string>
    <string name="sms_content">Hello ! I found this super book : "%1$s". You can borrow it : %2$s</string>
    <string name="sms_send_error_generic">Error occurred : Generic error</string>
    <string name="sms_send_error_service">Error occurred : SMS service is currently unvailable</string>
    <string name="sms_send_error_pdu">Error occurred : no PDU was found</string>
    <string name="sms_send_error_off">Error occurred : radio is off</string>
    <string name="sms_send_error">An error occurred on sending SMS. Please retry again or contact us</string>
    <string name="sms_send_ok">Your SMS message was correctly send</string>
    <string name="sms_delivery_ok">Your SMS was correctly delivered</string>
    <string name="sms_delivery_error">Your SMS wasn\'t correctly delivered. An error occurred.</string>
    <string name="label_sms_back">Return to book</string>
    <string name="website_back_label">Return to main screen</string>
    <string name="customize_title">Book title</string>
    <string name="customize_desc">Book introduction</string>
    <string name="customize_actions">Actions (borrow, see book page&#8230;)</string>
    <string name="customize_place_header">Header</string>
    <string name="customize_writer">Writer\'s informations</string>
    <string name="customize_submit">Submit changes</string>
    <string name="error_customization_save">An error occurred on saving customizations</string>
    <string name="pref_label_auto">Automatic (every launch of application)</string>
    <string name="pref_label_manual">Manual (please, specify the synchronization date)</string>
    <string name="pref_ref_uri">From which URL you come ?</string>
    <string name="pref_sync_about">About you (max 100 chars)</string>
    <string name="pref_sync_type">Synchronization type</string>
    <string name="pref_sync_date">Date of the first synchronization</string>
    <string name="pref_sync_frequency">Synchronization frequency</string>
    <string name="pref_btn_submit">Submit</string>
    <string name="once_a_day">Once a day</string>
    <string name="once_a_week">Once a week</string>
    <string name="once_a_month">Once a month</string>
    <string name="tab_books">Titles</string>
    <string name="tab_categories">Categories</string>
    <string name="tab_writers">Writers</string>
    <string name="no_langs_title">Error on loading languages</string>
    <string name="no_langs_msg">An error occurred on loading languages. Please, reload the application et retry the operation.</string>
    <string name="dialog_error_refresh">Reload</string>
    <string name="dialog_error_quit">Quit</string>
    <string name="account_credentials_title">Credentials</string>
    <string name="account_preferencies_title">Preferencies</string>
    <string name="account_waiting_list_title">Waiting list</string>
    <string name="my_account_login">Login</string>
    <string name="my_account_password">Web Service password</string>
    <string name="my_account_button">Login</string>
    <string name="loading_title">Please waiting</string>
    <string name="my_account_progress">We are checking your credentials.</string>
    <string name="book_progress">Content loading in progress</string>
    <string name="action_borrow">Borrow</string>
    <string name="action_add">Add to waiting list</string>
    <string name="action_sms">Send by SMS</string>
    <string name="waiting_list_add_ok">Books was successfully added to your waiting list.</string>
    <string name="waiting_list_add_error">Books wasn\'t successfully added to your waiting list.</string>
    <string name="borrow_title">Borrow a book</string>
    <string name="borrow_do">Borrow</string>
    <string name="cancel">Cancel</string>
    <string name="show_details">Show details</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Confirm delete</string>
    <string name="delete_do">Yes, delete this book</string>
    <string name="delete_confirm">Do you really want to delete this item ?</string>
    <string name="error_deleting_waiting_list">An error occurred on deleting a book. Please retry or contact us.</string>
    <string name="books_quantity">Loaded %1$s books from %2$s</string>
    <string name="books_all">All books</string>
    <string name="books_letter_quantity">All books : %1$s</string>
    <string name="do_sort_text">Show</string>
    <string name="book_back">Books loading in progress</string>
    <string name="book_added_success">%1$s were added to your waiting list.</string>
    <string name="book_added_error">An error occurred on adding books into your waiting list. %1$s</string>
    <string name="error_saving_db">Error on saving into local database.</string>
    <string name="error_already_saved_books">Some books weren\'t added %1$s They are already in your waiting list.</string>
    <string name="error_saving_preferencies">An error occurred on saving preferencies. Please try againt later or report us this issue.</string>
    <string name="error_loading_customizations">An error occurred on loading customizations. Please try againt later or report us this issue.</string>
    <string name="error_loading_webiste">An error occurred on loading webiste. $1%s</string>
    <string name="error_wifi_connection">Internet connection was lost. Some of application features can be disabled.</string>
    <string name="error_book_loading">An error occurred on loading book informations. Please try againt later or report us this issue.</string>
    <string name="error_contact_title">Title must have between 1 and %1$s chars.</string>
    <string name="error_contact_content">Content must have at least %1$s chars.</string>
    <string name="error_contact_email">Invalid e-mail format</string>
    <string name="success_customization_save">Customization was successfully saved.</string>
    <string name="main_back">Back to main screen</string>
    <string name="book_limit_error">You can\'t add no more than %1$s books</string>
    <string name="borrowing_to_return">You have %1$s books to return before %2$s</string>
    <string name="borrowing_nothing_to_return">You don\'t have the books to return</string>
    <string name="success_preferencies_save">Your preferencies were saved correctly</string>
    <string name="my_preferencies_saving">Saving in progress</string>
    <string name="borrowing_success">Book was correctly borrowed</string>
    <string name="load_more">Load more</string>
    
    <color name="text">#5d5f62</color>
    <color name="background">#e6e8ec</color>
    <color name="btn_pressed">#dedfe2</color>
    <color name="btn_normal">#f3f5f7</color>
    <color name="btn_border_top">#969799</color>
    <color name="btn_border_bottom">#c2c3c5</color>
    <color name="btn_border_sides">#d4d4d6</color>
    <color name="disabled_field">#d8d9db</color>
    <color name="midnight_blue">#2c3e50</color>
    <color name="white">#ffffff</color>
    <color name="clouds">#ecf0f1</color> 
    <color name="peter_river">#3498db</color>
    <color name="green">#1EA819</color> 
    <color name="pomegranate">#c0392b</color>
    <color name="wisteria">#8e44ad</color>
</resources>