<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/mainWelcomeText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/main_welcome"
    />
    <Button
        android:id="@+id/buttonAccount"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/buttonBooks"
        android:layout_below="@id/mainWelcomeText"
        android:text="@string/label_account"
        android:onClick="goToMyAccount"
    />
    <Button 
        android:id="@+id/buttonBooks"
        android:layout_width="150dp"
        android:layout_height="75dp" 
        android:layout_alignParentRight="true"
        android:layout_below="@id/mainWelcomeText"
        android:text="@string/label_books"
        android:onClick="goToBooksList"
    />
    <Button
        android:id="@+id/buttonWebapp"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/buttonContact"
        android:text="@string/label_webapp"
        android:layout_below="@id/buttonAccount"
        android:onClick="goToWebapp"
    />
    <Button
        android:id="@+id/buttonContact"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_alignParentRight="true"
        android:text="@string/label_contact"
        android:layout_below="@id/buttonBooks"
        android:onClick="goToContactForm"
    />
    <Button
        android:id="@+id/buttonCustomize"
        android:layout_width="139dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:text="@string/label_personnalize"
        android:layout_below="@id/buttonContact"
        android:onClick="goToCustomize"
    />
    
</RelativeLayout>