<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ContactFormActivity"
    >
    <TableLayout
        android:id="@+id/contactFormContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" android:shrinkColumns="0"
   android:stretchColumns="1" >
        <TextView
            android:id="@+id/formLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_form_welcome"
        /> 
        <TextView
            android:id="@+id/mailTitleLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_form_title"
            android:paddingTop="@dimen/activity_vertical_margin"
        />
        <EditText
            android:id="@+id/mailTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="dqsdsqdsqdsqdsqdsqdqsdqsdqsdqsd"
        /> 
        
        <TextView
            android:id="@+id/mailContentLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_form_content"
            android:paddingTop="@dimen/activity_vertical_margin"
        />
        <EditText
            android:id="@+id/mailContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="dqsdsqdsqdsqdsqdsqdqsdqsdqsdqsd"
        />
        <!-- TODO : pour mail il faut faire comme réellement, avec @ disponible immédiatement sur le clavier -->
        <TextView
            android:id="@+id/mailAddressLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_form_address"
            android:paddingTop="@dimen/activity_vertical_margin"
        />
        <EditText
            android:id="@+id/mailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="bartkonieczny@gmail.com"
        />
        <TextView
            android:id="@+id/mailCategoryLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_form_category"
        />
        <TextView
            android:id="@+id/mailCategoryError"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/contact_form_category_error"
        />
        <Spinner
            android:id="@+id/mailMessageType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"  
            android:entries="@array/demand_types_list"
        />
        <Button
            android:id="@+id/mailButtonSend"
            android:text="@string/label_contact_send"
            android:onClick="handleForm"
        />
    </TableLayout>
</ScrollView>