<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >  
    <TextView
        android:id="@+id/myAccountLoginLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_account_login" />
    <EditText
        android:id="@+id/myAccountLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
     />
    
    <TextView
        android:id="@+id/myAccountPasswordLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_account_password" />
    <EditText
        android:id="@+id/myAccountPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
     /> 
        <Button
            android:id="@+id/myAccountButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_account_button"
            android:onClick="handleMyAccountForm"
        /> 
     
</LinearLayout>