<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SendSmsActivity" >
    
        <TextView
            android:id="@+id/labelSmsNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sms_number"
        /> 
   	<AutoCompleteTextView 
   		android:id="@+id/autocompleteContactList" 
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/labelSmsNumber"
   		android:layout_marginRight="5dip"
   		android:layout_marginTop="10dip"
   		android:layout_marginLeft="5dip"  />
        <TextView
            android:id="@+id/labelSmsContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sms_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/autocompleteContactList"
        /> 
   	<EditText
   	    android:id="@+id/smsText"
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:inputType="textMultiLine"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/labelSmsContent" />
   	<Button
   	    android:id="@+id/smsSendButton"
   	    android:layout_width="fill_parent"
        android:layout_height="75dp" 
        android:text="@string/label_sms_submit"
        android:onClick="handleForm" 
        android:layout_below="@id/smsText"
   	/>
   	<Button
   	    android:id="@+id/smsCancelButton"
   	    android:layout_width="fill_parent"
        android:layout_height="75dp" 
        android:text="@string/label_sms_back" 
        android:layout_alignParentLeft="true"
        android:layout_below="@id/smsSendButton"
        android:onClick="backToBook" 
   	/>
   	
</RelativeLayout> 